2006-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl:  Bug 1560822: hyphen handling.
	* blowfish.test: Added test for hyphen handling.
	* blowfish.man:  Note -- for option termination.
	* pkgIndex.tcl:  Increment patchlevel.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* blowfish.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* blowfish.test: Hooked into the new common test support code.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* blowfish.bench: Extended with benchmarks for the keyschedule.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl:   Added some performance enhancements. Added some
	* blowfish.test:  documentation for the API. Fix testing to test 
	* blowfish.man:   each implementation. Checked with tcl 8.2.
	* pkgIndex.tcl:

2005-06-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* blowfish.man: Fixed a typo.

2005-06-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.man: new file

2004-12-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl: Fixed bug in search for Trfcrypt (noticed by
	Antirez). Added a Reset command to the programming API to permit
	reuse of a key with a new initialization vector..

2004-12-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl:  Add in support for Trfcrypt implementation.
	* blowfish.test: Support variable key length and added tests.

2004-12-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl:  Imported Frank Pilhofer's pure-Tcl implementation
	* blowfish.test: from the Tcler's wiki. Modified to remove the
	Itcl code and to conform to the tcllib programming standards and
	conventions. Test file includes standard test vectors.
	
